tests/sksl/errors/CanExitWithoutReturningValue.glsl
### Compilation failed:

error: 6: function 'if_only' can exit without returning a value
error: 7: function 'return_on_if_but_not_else' can exit without returning a value
error: 8: function 'return_on_else_but_not_if' can exit without returning a value
error: 10: function 'for_with_conditional_return' can exit without returning a value
error: 11: function 'for_with_conditional_break' can exit without returning a value
error: 12: function 'for_with_conditional_continue' can exit without returning a value
error: 14: function 'do_with_conditional_return' can exit without returning a value
error: 15: function 'do_with_conditional_break' can exit without returning a value
error: 16: function 'do_with_conditional_continue' can exit without returning a value
error: 18: function 'bad_if_else_chain' can exit without returning a value
error: 32: function 'switch_empty' can exit without returning a value
error: 36: function 'switch_with_no_default' can exit without returning a value
error: 43: function 'switch_with_break' can exit without returning a value
error: 55: continue statement cannot be used in a switch
error: 51: function 'switch_with_continue' can exit without returning a value
error: 59: function 'switch_with_fallthrough_off_bottom' can exit without returning a value
error: 67: function 'switch_with_conditional_break' can exit without returning a value
error: 77: continue statement cannot be used in a switch
error: 75: function 'switch_with_conditional_continue' can exit without returning a value
error: 83: function 'switch_with_conditional_if_then_return' can exit without returning a value
error: 90: function 'switch_with_conditional_break_then_fallthrough' can exit without returning a value
21 errors
